--- a/config/crds/showks_v1beta1_keycloakuser.yaml
+++ b/config/crds/showks_v1beta1_keycloakuser.yaml
@@ -11,6 +11,8 @@ spec:
     kind: KeyCloakUser
     plural: keycloakusers
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       properties:
@@ -27,6 +29,11 @@ spec:
         metadata:
           type: object
         spec:
+          properties:
+            username:
+              description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
+                Important: Run "make" to regenerate code after modifying this file'
+              type: string
           type: object
         status:
           type: object
