allow to get secret

--- a/config/rbac/rbac_role.yaml
+++ b/config/rbac/rbac_role.yaml
@@ -45,6 +45,12 @@ rules:
   - update
   - patch
 - apiGroups:
+  - ""
+  resources:
+  - secret
+  verbs:
+  - get
+- apiGroups:
   - admissionregistration.k8s.io
   resources:
   - mutatingwebhookconfigurations
