secret名をカスタムリソース経由で渡す

--- a/config/crds/showks_v1beta1_keycloakuser.yaml
+++ b/config/crds/showks_v1beta1_keycloakuser.yaml
@@ -30,6 +30,8 @@ spec:
           type: object
         spec:
           properties:
+            passwordSecretName:
+              type: string
             realm:
               type: string
             username:
