--- a/config/kustomization.yaml
+++ b/config/kustomization.yaml
@@ -1,12 +1,12 @@
 # Adds namespace to all resources.
-namespace: showks-keycloak-user-operator-system
+namespace: keycloak-user-operator-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: showks-keycloak-user-operator-
+namePrefix: keycloak-user-operator-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
